--- a/trunk/paper/cmsc636-swarmvis.bib
+++ b/trunk/paper/cmsc636-swarmvis.bib
@@ -34,7 +34,7 @@ begin: BREVE related papers
 
 @inproceedings{860347,
  author = {Klein, J.},
- title = {breve: a 3D environment for the simulation of decentralized systems and artificial life},
+ title = {Breve: a 3D environment for the simulation of decentralized systems and artificial life},
  booktitle = {ICAL 2003: Proceedings of the eighth international conference on Artificial life},
  year = {2003},
  isbn = {0-262-69281-3},
@@ -55,7 +55,7 @@ begin: BREVE related papers
 
 @INPROCEEDINGS{Spector02evolutionarydynamics,
     author = {Spector, L. and Klein, J.},
-    title = {Evolutionary dynamics discovered via visualization in the BRAVE simulation environment},
+    title = {Evolutionary dynamics discovered via visualization in the BREVE simulation environment},
     booktitle = {Eds.), Workshop Proc. of ALife VIII, UNSW},
     year = {2002},
     pages = {163--170},
@@ -288,7 +288,7 @@ year={2002},
 % flow
 @conference{couzin2003sol,
   title={{Self-organized lane formation and optimized traffic flow in army ants}},
-  author={Couzin, ID and Franks, NR},
+  author={Couzin, I.D. and Franks, N.R.},
   booktitle={Proc. R. Soc. Lond. B},
   volume={270},
   pages={139--146},
